test_regress/t/t_split_var_1_bad.out
                                              : ... In instance t
                                              : ... In instance t
                                              : ... In instance t
                                              : ... In instance t
                                              : ... In instance t.i_sub0
                                              : ... In instance t.i_sub1
                                              : ... In instance t.i_sub1
                                              : ... In instance t.i_sub3
                                              : ... In instance t.i_sub3
                                             : ... In instance t
                                           : ... In instance t
                                   : ... In instance t.i_sub2
                   ... Use "/* verilator lint_off SPLITVAR */" and lint_on around source to disable this message.
      |                                            ^~~~~~~~~~
      |                                          ^~~~~~~~
      |                                  ^~
      |                                 ^
      |                               ^
      |                               ^~~~
      |                             ^
      |                ^
      |                ^~~~~~~~~~~~~~~~~~~~~~~~
      |                ^~~~~~~~~~~~~~~~~~~~~~~~
      |              ^~~~~~~~~~~~~
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~
      |           ^~~~~~~~~~~~~~~~~~~
      |           ^~~~~~~~~~~~~~~~~~~~
      |           ^~~~~~~~~~~~~~~~~~~~
      |         ^~~~~~~~~~~~~~~~~~~~
    7 | logic [7:0] should_show_warning_global0 /*verilator split_var*/ ;
    8 | logic [7:0] should_show_warning_global1 [1:0] /*verilator split_var*/ ;
   11 |    logic [7:0] should_show_warning_ifs0 /*verilator split_var*/ ;
   12 |    logic [7:0] should_show_warning_ifs1 [1:0] /*verilator split_var*/ ;
   17 |    real should_show_warning0                  /*verilator split_var*/ ;
   18 |    string should_show_warning1                /*verilator split_var*/ ;
   19 |    wire   should_show_warning2                /*verilator split_var*/ ;
   30 |    function int bad_func(inout logic [3:0] inout_port /*verilator split_var*/ ,
   31 |                          ref logic [7:0] ref_port /*verilator split_var*/ );
   38 |       i_sub0.cannot_split1[0] = 0;
   39 |       i_sub0.cannot_split1[1] = bad_func(addr, rd_data0);
   51 |       rd_data = cannot_split0[addr];
   57 |    genvar cannot_split_genvar /*verilator split_var*/ ;
   60 |       rd_data = cannot_split[addr];
   72 |    assign b = a[0];   
   83 |    assign outwires[12] = inwires[13];   
   83 |    assign outwires[12] = inwires[13];   
%Error: Exiting due to
